# Financial_RAG_Assistant_AAIDC-M1

./: .env_example  .gitignore  LICENSE  README.md  generate_architecture.py  generate_repo_tree.py  pyproject.toml  repo_structure.txt  requirements.txt  setup.py  streamlit_financial_rag_assistant.py
evaluation_logs/: rag_eval_20250819_131014.csv
output/: response_20250806_165000.txt  response_20250806_165002.txt  response_20250806_165003.txt  response_20250806_165005.txt  response_20250806_165006.txt  response_20250806_165007.txt  response_20250808_180135.txt  response_20250808_180514.txt  response_20250808_180516.txt  response_20250808_180518.txt  response_20250808_180526.txt  response_20250808_180533.txt  response_20250808_180549.txt  response_20250808_180557.txt  response_20250808_180610.txt  response_20250810_105107.txt  response_20250810_115050.txt  response_20250819_131012.txt  response_20250819_131013.txt  response_20250819_131014.txt
src/: ingest.py  query.py
src/utils/: file_loader.py  text_helpers.py
test/: evaluate_retrieval.py  test_query.py
